--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Author: PixelNX
 					<div class="div_flex">
 						<div class="px_info">
 							<div class="px_ph padding_lr"><i class="fa fa-phone"></i>(+44) 07914 716903</div>
-							<div class="px_email"><i class="fa fa-envelope"></i>hello@mnlandscaping.co.uk</div>
+							<div class="px_email"><i class="fa fa-envelope"></i>mike@mngardeningservices.co.uk</div>
 						</div>
 						<div class="px_social_icon">
 							<ul>
@@ -544,7 +544,7 @@ Author: PixelNX
 								<p><b>Phone:</b> (+44) 07914 716903
 									<br>
 								</p>
-								<p><b>Email:</b> hello@mnlandscaping.co.uk</p>
+								<p><b>Email:</b> mike@mngardeningservices.co.uk</p>
 							</div>
 						</div>
 					</div>
