--- a/index.html
+++ b/index.html
@@ -503,8 +503,7 @@ Author: PixelNX
 		<div class="container">
 			<div class="px_main_heading padder_bottom_30">
 				<h1 class="text-center text-uppercase">START Gardening NOW</h1>
-				<div class="px_small_text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-					dapibus commodo interdum.</div>
+				<div class="px_small_text text-center">Get in contact today for a free no obligation quote</div>
 				<a href="#" class="px_img_width"><img src="assets/images/mn-removebg-preview.png"
 						class="px_img_responsive padder_bottom_30" alt="garden-care-start-garderning-now-logo">
 				</a>
