--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Author: PixelNX
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords"
-		content="agriculture, farmer shop, florist, garden, gardeners, gardening, groundskeeper, landscape, landscape architects, landscaping, lawn services" >
+		content="agriculture, farmer shop, florist, garden, gardeners, gardening, groundskeeper, landscape, landscape architects, landscaping, lawn services, corsham, corsham landscaping services, dorset, shaftesbury, wiltshire, somerset, wiltshire landscaping, dorset landscaping, shaftesbury landscaping, gardener near shaftesbury, gardener near corsham, gardener in dorset, gardener in corsham, landscaper near me" >
 	<title>MN Landscaping</title>
 	<!--Main Css Start-->
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
